# friendly-id-decoder

./: index.html  index.ts  package.json  vite.config.ts
wasm/: Cargo.toml  Makefile
wasm/src/: lib.rs
wasm/src/friendly_id/: base62.rs  error.rs  friendly_id.rs  mod.rs
